# eduroam_profile_generater

./: .gitignore  README.md  TDL_readme.txt  a.txt  cacert.csv  input.txt  log.csv  mail.edu.tw-TTLS-PAP-DER.crt  mail.edu.tw.eap-config  main.py  output.html  pyproject.toml  raw_input.txt  requirements.txt  tempCodeRunnerFile.py  timeout.txt  todo.md
Template/: eduroam-eap-generic-anonymous-PEAP-MSCHAPv2.eap-config
archive/html/: anonymous@asia.edu.tw.html  anonymous@au.edu.tw.html  anonymous@cc.cust.edu.tw.html  anonymous@cc.ncu.edu.tw.html  anonymous@cc.ncue.edu.tw.html  anonymous@ccs.cust.edu.tw.html  anonymous@cct.edu.tw.html  anonymous@chc.edu.tw.html  anonymous@cloud.dyu.edu.tw.html  anonymous@cloud.hfu.edu.tw.html  anonymous@csmu.edu.tw.html  anonymous@ctbc.edu.tw.html  anonymous@ctu.edu.tw.html  anonymous@ctust.edu.tw.html  anonymous@ctx10.nfu.edu.tw.html  anonymous@cute.edu.tw.html  anonymous@cy.edu.tw.html  anonymous@cyut.edu.tw.html  anonymous@dila.edu.tw.html  anonymous@dragon.nchu.edu.tw.html  anonymous@eduroam.nccu.edu.tw.html  anonymous@eduroam.ncku.edu.tw.html  anonymous@eduroam.ntnu.edu.tw.html  anonymous@eduroam.ntu.edu.tw.html  anonymous@eduroam.ntue.edu.tw.html  anonymous@ems.npu.edu.tw.html  anonymous@ems.tcust.edu.tw.html  anonymous@fcu.edu.tw.html  (+74 more)
src/: __init__.py  app.py  auth.py  constants.py  profile.py  utils.py
template/: eapol_test_PEAP-MSCHAPv2.conf  eapol_test_TTLS_PAP.conf  eduroam-eap-generic-anonymous-Both.eap-config
web/: app.py
第一版/: cacert.csv  loop.py  main_loop.py  raw_input.txt  timeout.html
第二版/: main.py  v2.py
(+222 files in other folders)
